<resources>
    <string name="app_name">Book Exchange</string>
    <string name="title_activity_book_list">BookListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_books">UserBooksActivity</string>
    <string name="title_activity_owned_book">OwnedBookActivity</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="title_activity_claimed_book">ClaimedBookActivity</string>
    <string name="owned_by">Owned by %1$s (click for contact info)</string>
    <string name="price">$%1$.2f</string>
    <string name="profile">Profile</string>
    <string name="your_books">Your Books</string>
    <string name="claimed_books">Claimed Books</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="new_user_create_a_new_account">New user? Create a new account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="school">School</string>
    <string name="name">Name</string>
    <string name="enter_book_title">Enter book title</string>
    <string name="enter_author_s_name">Enter author\'s name</string>
    <string name="enter_your_book_s_price">Enter your book\'s price</string>
    <string name="claim">Claim</string>
    <string name="delete">Delete</string>
    <string name="picture_of_book">Picture of book</string>
    <string name="bookhandler_exception">The Activity is not implementing the BookHandler interface.</string>
    <string name="edit_book">Edit Book</string>
    <string name="new_book">New Book</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="camera_prompt">Camera is needed to take image of book</string>
    <string name="empty_field_error">This field can not be empty!</string>
    <string name="book_list_title">Book List - Browse</string>
    <string name="error_msg">Error: %1$s</string>
    <string name="claimed_books_title">Your Claimed Books</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_email">Please enter email</string>
    <string name="login_failed">Login failed: User not found</string>
    <string name="book_created">BOOK CREATED</string>
    <string name="profile_error">Error getting profile information</string>
    <string name="account_created">ACCOUNT CREATED</string>
    <string name="enter_phone">Please enter phone</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_msg">Please enter your message</string>
    <string name="enter_subj">Please enter your message subject</string>
    <string name="enter_school">Please enter your school name</string>
    <string name="submit">Submit</string>
    <string name="msg_sent">MESSAGE SENT! THANK YOU!</string>
    <string name="app_email">nikaduffus@gmail.com</string>
    <string name="contact_us">Contact Us</string>
    <string name="search">Search</string>
    <string name="claim_end_date">Claim ends on %1$s</string>
    <string name="claimed_by">Claimed by %1$s</string>
    <string name="claim_error">Could not claim book. Please try again.</string>
    <string name="free">Free!</string>
    <string name="neg_price_error">Price can not be negative.</string>
    <string name="navigation">Navigation</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="queryhandler_exception">Activity not implementing QueryHandler interface</string>

</resources>