<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    tools:context="hu.ait.bookexchange.BookListActivity">-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile" />
    <item
        android:id="@+id/action_owned_books"
        android:orderInCategory="100"
        android:title="@string/your_books" />
    <item
        android:id="@+id/action_claimed_books"
        android:orderInCategory="100"
        android:title="@string/claimed_books" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact_us" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/log_out" />
</menu>