<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.ait.bookexchange.UserBookListActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_claimed_books"
        android:orderInCategory="100"
        android:title="@string/claimed_books"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never" />
</menu>